--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-#Items in this file were too big to store in git
-./DONE/Cadeiras de Erasmus/Film and Literature/Tec guy with blurry phone.mp4
-./ASof/PPTs and Books/System Design Interview - Volume 2- Alex Xu.pdf
+# Items too big for git
+DONE/Cadeiras de Erasmus/Film and Literature/Tec guy with blurry phone.mp4
+ASof/PPTs and Books/System Design Interview - Volume 2- Alex Xu.pdf
