--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 # Items too big for git
-./DONE/Cadeiras de Erasmus/Film and Literature/Group E Cat Pictures Please – An Amateur Comedy.mp4
+DONE/Cadeiras de Erasmus/Film and Literature/Group E Cat Pictures Pl*
 ASof/PPTs and Books/System Design Interview - Volume 2- Alex Xu.pdf
